--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1> this first and last master branch</h1>
     <h2> this is first branch</h2>
+    <h3>this is third commit</h3>
 </body>
 </html>
