--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         <h1> this first and last master branch</h1>
     <h2> this is first branch</h2>
     <h3>this is third commit</h3>
+
+
+    <p>this para added from pc after pull</p>
 </body>
 </html>
